@@ -157,3 +157,4 @@ A.sparc64-unknown-linux-gentoo1.4.16
 A.i386-pc-linux-fc4
 A.i386-pc-linux-suse9.3
 A.i386-pc-linuxoldld-deb3.1
+A.i386-pc-linux-deb3.1
