@@ -1,5 +1,8 @@
 *** Notes specific to am-utils version 6.2a1
 
+- minor new ports:
+	i386-pc-linux-deb3.1
+
 XXX: Dan, document sun_map_syntax flag in more detail in am-utils.texi and
 (more briefly) in amd.conf.5.  And in this NEWS file, also briefly.
 
